# vmf-forge

./: .gitignore  Cargo.toml  README.md
benches/: parser_iai_bench.rs  vmf_parser_bench.rs
src/: errors.rs  lib.rs  parser.rs  prelude.rs  utils.rs  vmf.pest
src/vmf/: common.rs  entities.rs  metadata.rs  mod.rs  regions.rs  world.rs
src/vmf_file/: io.rs  merge.rs  mod.rs  visgroup_ops.rs
tests/: entities_test.rs  integration_test.rs  metadata_test.rs  regions_test.rs  visgroup_integration_test.rs  vmf_parse_test.rs  world_test.rs
vmf_examples/: complex.vmf  displacements.vmf  invalid.vmf  valid.vmf
