[package]
name = "vmf-forge"
version = "0.4.0"
edition = "2024"
authors = ["laVashik <contact@lavashik.lol>"]
description = "A parser for Valve Map Format (VMF) files"
readme = "README.md"
license = "MIT"
repository = "https://github.com/IaVashik/vmf-forge"
documentation = "https://docs.rs/vmf-forge"
keywords = ["vmf", "valve", "map", "parser", "source"]
categories = ["parser-implementations", "game-development"]

[[bench]]
name = "vmf_parser_bench"
harness = false 

[[bench]]
name = "parser_iai_bench"
harness = false 

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
indexmap = "2.8.0"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "into_iterator"] }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
iai-callgrind = "0.14.0"

[build-dependencies]
pest_generator = "2.8.0"


[features]
default = []
debug_assert_info = []
serialization = ["dep:serde", "indexmap/serde"]

# [lints.rust]
# unused = { level = "allow", priority = -1 } # For exploratory dev.